--- a/Desafios/d012/pacote-d012/style.css
+++ b/Desafios/d012/pacote-d012/style.css
@@ -1,3 +1,17 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", serif;
+    --fonte3: "Sriracha", cursive;
+}
+  
+
 *{
     margin: 0;
     padding: 0;
@@ -6,6 +20,7 @@
 html,body{
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte1);
 
 }
 
@@ -18,6 +33,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p{
@@ -39,6 +56,8 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -53,7 +72,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.555);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 
