--- a/Exercicios/EX026/mq002/estilos/paisagem.css
+++ b/Exercicios/EX026/mq002/estilos/paisagem.css
@@ -1,7 +1,8 @@
 @charset 'UTF-8';
 
 html,body{
-    background-color: aqua;
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
 }
 
 h1{
