--- a/Exercicios/EX026/mq002/estilos/retrato.css
+++ b/Exercicios/EX026/mq002/estilos/retrato.css
@@ -1,5 +1,8 @@
 @charset 'UTF-8';
 
 html,body{
-    background-color: red;
+    background-image: url(../imagens/cev-portrait.jpg);
+
+    background-position: center bottom;
+    background-repeat: no-repeat;
 }
