--- a/Exercicios/EX026/mq002/estilos/style.css
+++ b/Exercicios/EX026/mq002/estilos/style.css
@@ -5,10 +5,12 @@
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-html body{
+html, body{
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 h1{
