--- a/Exercicios/EX026/mq005/estilos/style.css
+++ b/Exercicios/EX026/mq005/estilos/style.css
@@ -18,8 +18,21 @@ header h1{
     padding: 10px;
 }
 
-menu{
+span#burguer{
+    background-color: gray;
     display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+span#burguer:hover{
+    background-color: white;
+    color: black;
+}
+
+menu{
+    display: none;
 }
 
 menu ul{
