--- a/Exercicios/ex027/flex013/estilos/style.css
+++ b/Exercicios/ex027/flex013/estilos/style.css
@@ -22,11 +22,11 @@ header{
 }
 
 header > h1{
-    border: 1px dotted black;
+    
     flex: 0 0 200px;
 }
 header > nav{
-    border: 1px dotted black;
+    
     display: flex;
     flex-flow: row wrap;
 }
@@ -53,4 +53,18 @@ main{
     padding: 10px;
     border-radius: 10px;
     box-shadow: 2px 2px 3px black;
+}
+
+@media screen and (max-width:600px) {
+    header, header nav{
+        flex-flow: column nowrap;
+    }
+
+    header h1{
+        flex-basis: 50px;
+    }
+
+    header nav a{
+        width: 90vw;
+    }
 }
